--- a/core/static/css/garzon.css
+++ b/core/static/css/garzon.css
@@ -122,7 +122,7 @@ header {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
   gap: 20px;
-  max-height: 400px;
+  max-height: 510px;
   overflow-y: auto;
   padding-right: 5px;
   padding-bottom: 20px;
@@ -183,9 +183,15 @@ header {
   justify-content: space-around;
 }
 
+.registrar-comanda-garzon{
+  display: flex;
+  align-items: center;
+}
+
 .registrar-comanda-garzon h1{
   color: white;
   font-size: 16px;
+  margin: 0px;
 }
 
 .registrar-comanda-numero-clientes {
@@ -283,6 +289,8 @@ header {
   padding: 6px;
   cursor: pointer;
   border-radius: 4px;
+  display: flex;
+  justify-content: center;
 }
 
 .selector-mesas div:hover {
@@ -323,6 +331,8 @@ header {
   font-size: 16px;
   font-weight: bolder;
   color: white;
+  margin-bottom: 10px;
+  margin-top: 10px;
 }
 
 .registrar-comanda-derecha-medio-pedido-contenedor {
@@ -455,17 +465,165 @@ header {
 /* MODAL */
 
 .contenedor-modal-derecha {
+  padding: 12px;
+  width: 440px;
+}
+
+.contenedor-modal-inicio{
+  display: flex;
+  padding: 12px;
+  justify-content: flex-end;
+}
+
+.contenedor-modal-inicio button{
+  background-color: #6246ea;
+}
+
+.contenedor-modal-inicio button:hover{
+  background-color: #2f2462;
+}
+
+.contenedor-modal-divisor{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+}
+
+.contenedor-modal-izquierda img{
+  width: 250px;
+  height: 250px;
+  padding: 20px;
+}
+
+.contenedor-modal-items-centrados h1{
+  font-size: 18px;
+  font-weight: bolder;
+  display: flex;
+  justify-content: center;
+}
+
+.contenedor-modal-items-centrados h2{
+  color: #e74c3c;
+  font-size: 16px;
+  font-weight: bolder;
+  display: flex;
+  justify-content: center;
+}
+
+.modal-footer{
+  display: flex;
+  justify-content: space-evenly;
+}
+
+#cancelar-modal{
+  background-color: #e45858;
+  color: white;
+  font-size: 16px;
+  border: none;
+  cursor: pointer;
+  width: 150px;
+  height: 50px;
+  border-radius: 10px;
+  font-weight: bolder;
+}
+
+#cancelar-modal:hover{
+  background-color: #de3535;
+}
+
+#agregar-modal{
+  background-color: #6246ea;
+  color: white;
+  font-size: 16px;
+  border: none;
+  cursor: pointer;
+  width: 150px;
+  height: 50px;
+  border-radius: 10px;
+  font-weight: bolder;
+}
+
+#agregar-modal:hover{
+  background-color: #2f2462;
+}
+
+.contenedor-modal-izquierda{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.form-check-input[type="checkbox"] {
+  appearance: none;
+  width: 18px;
+  height: 18px;
+  border: 2px solid #ccc;
+  border-radius: 4px;
+  margin-right: 8px;
+  position: relative;
+  cursor: pointer;
+}
+
+.form-check-input[type="checkbox"]:checked {
+  background-color: #6246ea;
+  border-color: #6246ea;
+}
+
+.form-check-input[type="checkbox"]::before {
+  position: absolute;
+  top: -2px;
+  left: 2px;
+  color: white;
+  font-size: 14px;
+  display: none;
+}
+
+.form-check-input[type="checkbox"]:checked::before {
+  display: block;
+}
+
+.form-label{
+  font-weight: bolder;
+  font-size: 16px;
+}
+
+.contenedor-modal-bajar{
+  padding: 10px;
   max-height: 400px;
   overflow-y: auto;
-  padding-right: 10px;
 }
 
-
-.contenedor-modal-derecha::-webkit-scrollbar-thumb {
-  background-color: #2f2462;
-  border-radius: 4px;
+.contenedor-acompanamientos-titulo{
+  display: flex;
+  justify-content: space-between;
 }
 
-.contenedor-modal-derecha::-webkit-scrollbar {
-  width: 6px;
+.contenedor-acompanamientos-titulo h1{
+  font-size: 18px;
+  font-weight: bolder;
+}
+
+.contenedor-acompanamientos-titulo h2{
+  font-size: 18px;
+  font-weight: bolder;
+  color: #e74c3c;
+}
+
+.form-check-modal{
+  display: flex;
+  justify-content: space-between;
+}
+
+#precio-form-modal{
+  color: #e74c3c;
+  font-weight: bolder;
+}
+
+input[type="radio"]:checked {
+  accent-color: #6246ea;
+}
+
+.form-check-input:checked {
+  background-color: #6246ea;
+  border-color: #6246ea;
 }
